# vanity

./: Cargo.toml  Makefile  PERF_NOTES.md  README.md  bench_ab.sh  build.rs
cuda/: cuda_matcher.cu
scripts/: bench_cuda_ab.sh
src/: main.rs
