[package]
name = "blocknet-vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1"
rand = "0.8"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[features]
default = []
cuda = []

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
